--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Rachel S",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mongoose": "^6.3.6"
   }
 }
